fix(articles): fix width of images on mobile devices

--- a/components/Articles/short_article.module.scss
+++ b/components/Articles/short_article.module.scss
@@ -18,6 +18,7 @@
     height: auto;
     overflow: hidden; 
     border-radius: 8px;
+    width: 100%;
 
     img {
       transition: transform .5s ease;
